--- a/app/src/main/res/drawable/bg_gradient.xml
+++ b/app/src/main/res/drawable/bg_gradient.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#f9d34c"
-        android:endColor="#f25019"
+        android:startColor="#6db3f2"
+        android:endColor="#1e69de"
         android:angle="270"
         android:type="linear"/>
 
